--- a/lee.somin/profile/index.html
+++ b/lee.somin/profile/index.html
@@ -9,17 +9,19 @@
 
 
 <body>
-<header>
+	<header>
 
-	<div class="topnav">
+		<div class="topnav">
  			<a href="#"> Projects </a>
 			<a href="#"> Passion</a>
-			<a href="#"> About Me</a>
+			<a href=""> About Me</a>
 
 			
-	</div>
+		</div>
 
 	</header>
+
+	
 
 
 
