--- a/lee.somin/initializr/index.html
+++ b/lee.somin/initializr/index.html
@@ -12,7 +12,7 @@
         <link rel="apple-touch-icon" href="apple-touch-icon.png">
 
         <link rel="stylesheet" href="css/normalize.min.css">
-        <!-- <link rel="stylesheet" href="css/main.css"> -->
+        <link rel="stylesheet" href="css/main.css">
 
         <link rel="stylesheet" href="css/theme.css">
 
@@ -24,6 +24,7 @@
         <![endif]-->
 
         <div class="header-container">
+
             <header class="wrapper clearfix">
                 <h1 class="title">h1.title</h1>
                 <nav>
@@ -34,6 +35,7 @@
                     </ul>
                 </nav>
             </header>
+
         </div>
 
         <div class="main-container">
