--- a/lee.somin/midterm/index.html
+++ b/lee.somin/midterm/index.html
@@ -45,7 +45,7 @@
       </div>
 
       <footer data-role="footer">
-         
+
          <a href="#recent-page">Recent</a>
          <a href="#list-page">List</a>
          <a href="#user-profile-page">Profile</a>
@@ -57,24 +57,23 @@
       <header data-role="header">
          <h1>Search</h1>
       </header>
+
+
       <div data-role="main">
          <!-- ul>li*10>a[href=#animal-profile-page]>{Animal $} -->
          <ul>
-            <li><a href="#animal-profile-page">Animal 1</a></li>
-            <li><a href="#animal-profile-page">Animal 2</a></li>
-            <li><a href="#animal-profile-page">Animal 3</a></li>
-            <li><a href="#animal-profile-page">Animal 4</a></li>
-            <li><a href="#animal-profile-page">Animal 5</a></li>
-            <li><a href="#animal-profile-page">Animal 6</a></li>
-            <li><a href="#animal-profile-page">Animal 7</a></li>
-            <li><a href="#animal-profile-page">Animal 8</a></li>
-            <li><a href="#animal-profile-page">Animal 9</a></li>
-            <li><a href="#animal-profile-page">Animal 10</a></li>
+            <li><a href="#goal-profile-page">Goal 1</a></li>
+            <li><a href="#goal-profile-page">Goal 2</a></li>
+            <li><a href="#goal-profile-page">Goal 3</a></li>
+            <li><a href="#goal-profile-page">Goal 4</a></li>
+            <li><a href="#goal-profile-page">Goal 5</a></li>
+            <li><a href="#goal-profile-page">Goal 6</a></li>
+
          </ul>
       </div>
       <footer data-role="footer">
-         <a href="#recent-page">Recent</a>
-         <a href="#list-page">List</a>
+         <a href="#add-new-goal">Add New Goal</a>
+         <a href="#my-list">My List</a>
          <a href="#user-profile-page">Profile</a>
       </footer>
    </section>
@@ -88,8 +87,8 @@
          </p>
       </div>
       <footer data-role="footer">
-         <a href="#recent-page">Recent</a>
-         <a href="#list-page">List</a>
+         <a href="#add-new-goal">Add New Goal</a>
+         <a href="#my-list">My List</a>
          <a href="#user-profile-page">Profile</a>
       </footer>
    </section>
@@ -101,7 +100,7 @@
          <a href="#" data-rel="back">Back</a>
       </header>
       <div data-role="main">
-         Animal Profile
+         Goal Profile
       </div>
    </section>
 
